# todoapp

./: README.md  database.sqlite3  pyproject.toml
src/: app_controller.py  app_module.py  app_service.py  config.py  database.py  main.py
src/modules/todo/: todo_controller.py  todo_model.py  todo_module.py  todo_schema.py  todo_service.py
