[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = ""
authors = ["Agustin Arce <agustinarceprincich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["slim"], version = "^0.111.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
