[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = ""
authors = ["Agustin Arce <agustinarceprincich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["slim"], version = "^0.111.1"}
sqlmodel = "^0.0.21"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
